--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>The Snap</title>
-    <link rel="shortcut icon" href="./images/singleLogo.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./images/singleLogo.png"
+      type="image/x-icon"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="" />
@@ -11,7 +15,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/animate.min.css" />
     <link rel="stylesheet" href="css/et-line-font.css" />
-    <!-- <link rel="stylesheet" href="css/font-awesome.min.css" /> -->
     <link rel="stylesheet" href="css/vegas.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link
@@ -56,13 +59,7 @@
               <a
                 id="ans"
                 href="#about"
-                class="
-                  btn btn-lg btn-default
-                  smoothScroll
-                  wow
-                  fadeInUp
-                  hidden-xs
-                "
+                class="btn btn-lg btn-default smoothScroll wow fadeInUp"
                 data-wow-delay="0.8s"
                 >Let's begin</a
               >
@@ -75,7 +72,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-sm-12">
-            <img style="width: 70%;margin: auto;"
+            <img
+              style="width: 70%; margin: auto"
               src="images/gdscUsictLogo.png"
               class="img-responsive wow fadeInUp"
               alt="About"
@@ -92,146 +90,21 @@
               </div>
               <div class="wow fadeInUp" data-wow-delay="0.6s">
                 <p>
-                  Vivamus elit risus, porttitor id placerat ut, aliquet non
-                  quam. Pellentesque nulla metus, ornare et porttitor vel,
-                  consectetur vitae erat. Vestibulum tristique semper tellus
-                  vitae condimentum. Duis sed eros eget diam dictum posuere.
+                  Google Developer Student Clubs (GDSC) are community groups for
+                  college and university students interested in Google developer
+                  technologies. Students from all undergraduate or graduate
+                  programs with an interest in growing as a developer are
+                  welcome. By joining a GDSC, students grow their knowledge in a
+                  peer-to-peer learning environment and build solutions for
+                  local businesses and their communities.
                 </p>
-                <p>
-                  Aliquam vel gravida ligula. Phasellus ut purus ac libero
-                  ultrices commodo commodo at quam. In vestibulum purus sit amet
-                  tempus euismod. Donec sed congue nisl.
-                </p>
+                <p>The motto of GDSC is to Learn, Connect and Grow.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- <section id="feature">
-      <div class="container">
-        <div class="row">
-          <svg
-            preserveAspectRatio="none"
-            viewBox="0 0 100 102"
-            height="100"
-            width="100%"
-            version="1.1"
-            xmlns="http://www.w3.org/2000/svg"
-            class="svgcolor-light"
-          >
-            <path d="M0 0 L50 100 L100 0 Z"></path>
-          </svg>
-
-          <div class="col-md-4 col-sm-6">
-            <div class="media wow fadeInUp" data-wow-delay="0.4s">
-              <div class="media-object media-left">
-                <i class="icon icon-laptop"></i>
-              </div>
-              <div class="media-body">
-                <h2 class="media-heading">Responsive</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Quisque luctus lacus nulla, eget varius justo tristique ut.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 col-sm-6">
-            <div class="media wow fadeInUp" data-wow-delay="0.8s">
-              <div class="media-object media-left">
-                <i class="icon icon-refresh"></i>
-              </div>
-              <div class="media-body">
-                <h2 class="media-heading">Bootstrap</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Quisque luctus lacus nulla, eget varius justo tristique ut.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 col-sm-8">
-            <div class="media wow fadeInUp" data-wow-delay="1.2s">
-              <div class="media-object media-left">
-                <i class="icon icon-chat"></i>
-              </div>
-              <div class="media-body">
-                <h2 class="media-heading">Support</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Quisque luctus lacus nulla, eget varius justo tristique ut.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="clearfix text-center col-md-12 col-sm-12">
-            <a href="#contact" class="btn btn-default smoothScroll"
-              >Talk to us</a
-            >
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-offset-2 col-md-8 col-sm-12">
-            <div class="section-title">
-              <h1 class="wow fadeInUp" data-wow-delay="0.3s">Get in touch</h1>
-              <p class="wow fadeInUp" data-wow-delay="0.6s">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna
-                aliquam erat volutpat.
-              </p>
-            </div>
-            <div class="contact-form wow fadeInUp" data-wow-delay="1.0s">
-              <form id="contact-form" method="post" action="#">
-                <div class="col-md-6 col-sm-6">
-                  <input
-                    name="name"
-                    type="text"
-                    class="form-control"
-                    placeholder="Your Name"
-                    required
-                  />
-                </div>
-                <div class="col-md-6 col-sm-6">
-                  <input
-                    name="email"
-                    type="email"
-                    class="form-control"
-                    placeholder="Your Email"
-                    required
-                  />
-                </div>
-                <div class="col-md-12 col-sm-12">
-                  <textarea
-                    name="message"
-                    class="form-control"
-                    placeholder="Message"
-                    rows="6"
-                    required
-                  ></textarea>
-                </div>
-                <div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
-                  <input
-                    name="submit"
-                    type="submit"
-                    class="form-control submit"
-                    id="submit"
-                    value="SEND MESSAGE"
-                  />
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
     <footer>
       <div class="container">
         <div class="row">
